--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     },
     "require-dev": {
         "doctrine/dbal": "~2.6",
-        "phpunit/phpunit": "~6.0"
+        "mongodb/mongodb": "^1.4",
+        "phpunit/phpunit": "~6.0",
+        "predis/predis": "^1.1"
     },
     "suggest": {
         "doctrine/dbal": "For use database storage"
