--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "doctrine/dbal": "~2.6",
+        "mikey179/vfsStream": "^1.6",
         "mongodb/mongodb": "^1.4",
         "phpunit/phpunit": "~6.0",
         "predis/predis": "^1.1"
